bdr.BDR.scala.error
Compilation error:
BDR:1: error: Missing closing brace `}' assumed here
while (isOverMessage()) {
^